--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
+    "test": "jest",
+    "test-with-coverage": "jest --coverage",
     "ts-start": "ts-node --files src/index.ts",
     "run": "pnpm run compile && node dist/index.js"
   },
