--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-standard": "^12.0.2",
+    "tsx": "^4.15.9",
     "typescript": "^5.2.2"
   },
   "dependencies": {
